tails and statastic numbers

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         <div class="no">
           <div class="no-hd">
             <ul>
-              <li>23</li>
-              <li>55</li>
+              <li id="plotCount">23</li>
+              <li id="routeCount">55</li>
             </ul>
           </div>
           <div class="no-bd">
